fix: add og meta

--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
 		<meta charset="UTF-8" />
 		<meta
 			name="viewport"
-			content="initial-scale=1.0, width=device-width, height=device-height, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+			content="initial-scale=1.0, width=device-width, height=device-height"
 		/>
+		<title>GW2 Squad Shuffle</title>
 		<link href="style.css" rel="stylesheet" type="text/css" />
 		<link rel="icon" href="./images/wiki/item/Sandstorm_Meld_Hand.png" />
-		<title>GW2 Squad Shuffle</title>
+		<meta property="og:title" content="GW2 Squad Shuffle" />
+		<meta
+			property="og:description"
+			content="Simple page that lists some different build ideas to mix up your usual raids/strikes."
+		/>
+		<meta property="og:type" content="website" />
+		<meta
+			property="og:url"
+			content="https://stormalize.github.io/gw2-squad-shuffle"
+		/>
+		<meta
+			property="og:image"
+			content="https://stormalize.github.io/gw2-squad-shuffle/images/wiki/screen/la-aerodrome.jpg"
+		/>
+		<meta property="og:image:type" content="image/jpeg" />
+		<meta property="og:image:width" content="1024" />
+		<meta property="og:image:height" content="512" />
+		<meta name="og:image:alt" content="Lion's Arch Aerodrome illustration" />
 	</head>
 	<body>
 		<main>
